--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "supabase>=2.0.0",
     "python-dotenv>=1.0.0",
     "mistralai>=1.0.0",
-    "Pillow>=10.0.0"
+    "Pillow>=10.0.0",
+    "cloudinary>=1.36.0"
 ]
 
 [project.urls]
