--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,9 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "mistralai>=1.0.0",
     "Pillow>=10.0.0",
-    "cloudinary>=1.36.0"
+    "cloudinary>=1.36.0",
+    "pandas>=2.0.0",
+    "openpyxl>=3.1.0"
 ]
 
 [project.urls]
