--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,17 +22,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install poetry
-        poetry install --no-dev
+        poetry install --with dev
 
     - name: Run tests
       run: |
-        python -m pytest tests/ -v --tb=short
+        poetry run pytest tests/ -v --tb=short
 
     - name: Check code style
       run: |
-        pip install black flake8
-        black --check src/ tests/
-        flake8 src/ tests/ --max-line-length=88
+        poetry run black --check src/ tests/
+        poetry run flake8 src/ tests/ --max-line-length=88
 
   lint:
     runs-on: ubuntu-latest
@@ -47,17 +46,19 @@ jobs:
 
     - name: Install linting tools
       run: |
-        pip install black flake8 mypy
+        python -m pip install --upgrade pip
+        pip install poetry
+        poetry install --with dev
 
     - name: Check code formatting
       run: |
-        black --check --diff src/ tests/
+        poetry run black --check --diff src/ tests/
 
     - name: Lint with flake8
       run: |
-        flake8 src/ tests/ --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 src/ tests/ --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
+        poetry run flake8 src/ tests/ --count --select=E9,F63,F7,F82 --show-source --statistics
+        poetry run flake8 src/ tests/ --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
 
     - name: Type checking with mypy
       run: |
-        mypy src/ --ignore-missing-imports
+        poetry run mypy src/ --ignore-missing-imports
