--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,7 @@ extend-exclude = '''
 
 [tool.flake8]
 max-line-length = 88
-extend-ignore = ["E203", "W503"]
+extend-ignore = ["E203", "W503", "E402", "E501", "F541", "W605"]
 exclude = [
     ".git",
     "__pycache__",
